# QuadSim

./: .clang-format
.github/ISSUE_TEMPLATE/: 機能リクエスト.md
.github/workflows/: build.yaml  pre-commit.yaml
common/geometry_utils/: CMakeLists.txt  package.xml
common/geometry_utils/include/geometry_utils/: geometry_utils.hpp
common/geometry_utils/src/: geometry_utils.cpp
common/quad_urdf_parser/: CMakeLists.txt  package.xml
common/quad_urdf_parser/include/quad_urdf_parser/: urdf_parser.hpp
common/quad_urdf_parser/src/: urdf_parser.cpp
controller/simple_gait_controller/: CMakeLists.txt  package.xml
controller/simple_gait_controller/include/simple_gait_controller/: link_length.hpp  simple_gait_controller_component.hpp
controller/simple_gait_controller/include/simple_gait_controller/controller_core/: ellipse_trajectory_planner.hpp  foot_speed_calculator.hpp  kinematics.hpp  phase_generator.hpp
controller/simple_gait_controller/launch/: joy.launch.py
controller/simple_gait_controller/params/: joy_control_params.yaml
controller/simple_gait_controller/src/: simple_gait_controller_component.cpp  simple_gait_controller_node.cpp
controller/simple_gait_controller/src/controller_core/: ellipse_trajectory_planner.cpp  foot_speed_calculator.cpp  kinematics.cpp  phase_generator.cpp
models/champ_quad_description/: CMakeLists.txt  package.xml
models/champ_quad_description/controllers/: controllers.yaml
models/champ_quad_description/urdf/: champ_quad.ros2_control.xacro  champ_quad.urdf.xacro
models/champ_quad_description/urdf/body/: body.urdf.xacro
models/champ_quad_description/urdf/leg/: leg.gazebo.xacro  leg.ros2_control.xacro  leg.urdf.xacro
models/quad_description_launch/: CMakeLists.txt  package.xml
models/quad_description_launch/launch/: display.launch.py
models/quad_description_launch/rviz/: display.rviz
models/simple_quad_description/: CMakeLists.txt  package.xml
models/simple_quad_description/controllers/: controllers.yaml
models/simple_quad_description/urdf/: simple_quad.ros2_control.xacro  simple_quad.urdf.xacro
models/simple_quad_description/urdf/body/: body.urdf.xacro
models/simple_quad_description/urdf/leg/: foot.gazebo.xacro  foot.urdf.xacro  hip.gazebo.xacro  hip.ros2_control.xacro  hip.urdf.xacro  lower_leg.gazebo.xacro  lower_leg.ros2_control.xacro  lower_leg.urdf.xacro  upper_leg.gazebo.xacro  upper_leg.ros2_control.xacro  upper_leg.urdf.xacro
models/simple_quad_description/urdf/sensors/: lidar.gazebo.xacro  lidar.urdf.xacro
simulator/quad_gazebo/: CMakeLists.txt  package.xml
simulator/quad_gazebo/launch/: empty_world.launch.py
simulator/quad_ignition/: CMakeLists.txt  package.xml
simulator/quad_ignition/launch/: empty_world.launch.py
